...
                Text("Health Disclaimer")
            }
            Section {
                Toggle(isOn: $presenter.acceptedTerms) {
                    Text("I acknowledge and accept the Terms of the Health Disclaimer")
                }
                .accessibilityIdentifier("HealthDisclaimerToggle")
                documentLink(.healthDisclaimer)
            }
            Section {
                Toggle(isOn: $presenter.acceptedPrivacy) {
                    Text("I acknowledge and accept the Terms of the Consumer Health Privacy Notice")
                }
                .accessibilityIdentifier("HealthPrivacyPolicyToggle")
                documentLink(.consumerHealthPrivacy)
            }
        }
        .scrollIndicators(.hidden)
        .onAppear { presenter.onViewAppear() }
        .onDisappear { presenter.onViewDisappear() }
...
