...
            secondary: .init(title: "Customize", identifier: "Customize") { presenter.navigateToPreferredDiet() },
            onDevSettingsPressed: nil
        ) {
            Section {
                Text("Let's get to work creating a custom diet program tuned to your needs. This will evolve over time as we learn how your body responds to the diet and make the necessary changes. This can always be manually altered later if you would like a specific change.")
            } header: {
                Text("Diet Program")
            } footer: {
                Text("Use the recommended plan, or answer a few questions to customize it.")
            }
        }
        .onAppear { presenter.onViewAppear() }
        .onDisappear { presenter.onViewDisappear() }
...
