...
                    .submitLabel(.continue)
                    .onSubmit {
                        guard presenter.canSave else { return }
                        presenter.onContinuePressed(oldDelegate: delegate)
                    }
            } header: {
                Text("What would you like to name this gym?")
            }
        }
        .navigationTitle("Create Gym Profile")
        .navigationBarTitleDisplayMode(.inline)
        .onAppear {
            presenter.onViewAppear(delegate: delegate)
...
