...
    @State var presenter: TargetWeightPresenter

    var delegate: TargetWeightDelegate

    var body: some View {
        OnboardingStepScaffold(
            title: "What's Your Target?",
            progress: presenter.isStandaloneMode ? nil : OnboardingStep.goalSetting.progress,
            primary: .init(title: "Continue", isEnabled: presenter.canContinue, identifier: "Continue") { presenter.onContinuePressed(delegate: delegate) },
            onDevSettingsPressed: nil
        ) {
            if presenter.didInitialize && presenter.weightUnit == .kilograms {
                kilogramsSection
...
